Replaced code from wrong java version.